# AI341-Project

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  __init__.py  body_classifier.py  damage_detector.py  langchain_orchestrator.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-hf-space.yml
api/: main.py
app/: app.js  index.html  style.css
app/static/: app.js  index.html  style.css
data/model b/: README.md
models/: README.md
models/model a/: config.py  data.py  evaluate.py  inference.py  main.py  model.py  train.py
models/model_a/: __init__.py  config.py  data.py  inference.py  main.py  run_training.py  utils.py
models/model_b/: __init__.py  config.py  data.py  evaluate.py  grad_cam.py  inference.py  inspection.py  main.py  model.py  run_damage_training.py  test_model_b_weights.py  train.py  utils.py
utils/: routing_service.py
weights/model a/: best_body_classifier.pth
weights/model b/: best_damage_detector.pth
