[tool.poetry]
name = "fleet-vision"
version = "0.1.0"
description = "Autonomous vehicle inspection and dispatch system"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.4.0"
torch = "^2.1.0"
torchvision = "^0.16.0"
numpy = "^1.26.0"
pillow = "^10.0.0"
scikit-learn = "^1.5.2"
opencv-python = "^4.10.0.84"
transformers = "^4.40.0"
langchain = "^0.1.0"
langchain-core = "^0.1.52"
openrouteservice = "^2.3.3"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
